- Updated the facebook login app settings - Updating behaviour when there is no internet

--- a/Peppermint/Info.plist
+++ b/Peppermint/Info.plist
@@ -47,12 +47,12 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>okankurtulus.Peppermint</string>
+				<string>com.ppm.peppermint</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>9</string>
+	<string>15</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
