--- a/Peppermint/GoogleService-Info.plist
+++ b/Peppermint/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>okankurtulus.Peppermint</string>
+	<string>com.ppm.peppermint</string>
 	<key>IS_ADS_ENABLED</key>
 	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
