- Fixed hanging recording view problem - Implemented tinyUrl to prevent google mail not to show links (This implementation will be updated in the future)

--- a/Peppermint/Info.plist
+++ b/Peppermint/Info.plist
@@ -132,6 +132,13 @@
 				<key>NSIncludesSubdomains</key>
 				<true/>
 			</dict>
+            <key>tinyurl.com</key>
+            <dict>
+                <key>NSExceptionRequiresForwardSecrecy</key>
+                <false/>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+            </dict>
 		</dict>
 	</dict>
 	<key>UILaunchStoryboardName</key>
