- Fixed App "Message is sending" hanging problem - Fixed Messages are not delivered when user navigate to tutorial problem - Added field validations to register screen

--- a/Peppermint/Info.plist
+++ b/Peppermint/Info.plist
@@ -50,9 +50,17 @@
 				<string>com.ppm.peppermint</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.ppl.peppermint</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>3</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -132,13 +140,13 @@
 				<key>NSIncludesSubdomains</key>
 				<true/>
 			</dict>
-            <key>tinyurl.com</key>
-            <dict>
-                <key>NSExceptionRequiresForwardSecrecy</key>
-                <false/>
-                <key>NSIncludesSubdomains</key>
-                <true/>
-            </dict>
+			<key>tinyurl.com</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
 		</dict>
 	</dict>
 	<key>UILaunchStoryboardName</key>
