--- a/Peppermint/Peppermint.entitlements
+++ b/Peppermint/Peppermint.entitlements
@@ -7,5 +7,7 @@
 		<string>applinks:peppermint.com</string>
 		<string>applinks:www.peppermint.com</string>
 	</array>
+	<key>com.apple.security.application-groups</key>
+	<array/>
 </dict>
 </plist>
