- Implemented Google Cloud Messaging Support

--- a/Watch Extension/Info.plist
+++ b/Watch Extension/Info.plist
@@ -32,7 +32,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.ppl.peppermint.watchkitapp</string>
+			<string>com.peppermint.app.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
