--- a/watch/Info.plist
+++ b/watch/Info.plist
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.ppl.peppermint</string>
+	<string>com.peppermint.app</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
