--- a/Peppermint/Info.plist
+++ b/Peppermint/Info.plist
@@ -153,6 +153,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
