--- a/Peppermint/Info.plist
+++ b/Peppermint/Info.plist
@@ -96,6 +96,8 @@
 		<string>fbauth</string>
 		<string>fbauth2</string>
 		<string>fb-messenger-api20140430</string>
+        <string>fb-messenger-api</string>
+        <string>fbshareextension</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
